Implement auto gamma correction, (sRGB, Linear, experimental rec bt.709)
Update the plugin architecture (libweed) to version 2.0, update the specs. for Weed, Weed Effects, Weed Audio Effects.
Optimised memory functions, colourspace conversions and frame decoding.
Optimise communication with commandline plugins using popen().
Fix screen / window sizing issues.
Implement a thread pool with generic worker threads.
Audio caching for multitrack is now done in a separate thread, eliminating the jitters during playback.
Fix data connections window so it shows the correct out parameter.
Correct bugs in letterboxing, make it the default player mode.
Fix new crashes with rendered effects generators.
Fix for multi_encoder3 looking for wrong (python2) sub encoders.
Crash recovery now recovers performance recording if lives crashes during rendering.
Crash recovery now restores the config file from backup if the original is damaged / missing.
Improvements to RFX script builder tool.
Improvements to Fileselector preview / Selection opener.
Improvements to effects previews.
Improvements to "targeted_zoom" effect in multitrack; add "scaledpoint" layout element in RFX windows.
New "auto-layout" mode to improve the appearance of all parameter windows.
Tweaks for Preferences window.
Fix mkv_decoder so it can decode webm clips.
Subcategorise and sort all effects menus by package and type.
Allow choice of "solo" or non solo mode when editing effect parameters in multitrack.
Stop multitrack parameters from getting reset after an autobackup, or when switching channels, e.g. in the compositor.
Smooth out playback by interpolating between soundcard timing updates.
Reduce audio underflows by temporarily slowing the video loop when they occur,
Smooth out ctr-up, ctrl-down, ctrl-left and ctrl-right (Trickplay) keys during playback.
Add ctrl-shift-space loop locking in clip editor (trickplay).
Add keys a / A (audio track lock / unlock) for clip editor playback.