@@ -3363,7 +3363,7 @@ int real_main(int argc, char *argv[], pthread_t *gtk_thread, ulong id) {
   weed_leaf_set = weed_leaf_set_host;
 
   // allow us to set immutable values (plugins can't)
-  weed_leaf_set = weed_leaf_set_host;
+  //weed_leaf_get = weed_leaf_get_monitor;
 
   // allow us to free undeletable plants (plugins cant')
   weed_plant_free = weed_plant_free_host;
