@@ -3610,13 +3610,18 @@ boolean add_file_info(const char *check_handle, boolean aud_only) {
       cfile->asampsize = atoi(array[11]);
       cfile->signed_endian = get_signed_endian(atoi(array[12]), atoi(array[13]));
       cfile->afilesize = strtol(array[14], NULL, 10);
-
+      g_print("achans is %d\n", cfile->achans);
       if (aud_only) {
         lives_strfreev(array);
         return TRUE;
       }
 
       cfile->frames = atoi(array[2]);
+      g_print("achans is %d\n", cfile->achans);
+      if (aud_only) {
+        lives_strfreev(array);
+        return TRUE;
+      }
       lives_snprintf(cfile->type, 40, "%s", array[3]);
       cfile->hsize = atoi(array[4]);
       cfile->vsize = atoi(array[5]);
