@@ -4527,3 +4527,72 @@ uint8_t uv_clamped_to_unclamped(uint8_t uv);
 /* pre multiply or un-pre-multiply alpha for a frame: if un is set to WEED_TRUE we un-pre-multiply, othewise pre-multiply */
 void alpha_premult(unsigned char *ptr, int width, int height, int rowstride, int pal, int un);
 
+
+
+
+Appendix B:
+
+code examples
+
+
+For the host:
+
+
+EXAMPLE 1: function overloading for host and plugins
+
+#include <weed/weed-host.h>
+#include <weed/weed.h>
+#include <weed/weed-effects.h>
+
+static void weed_clear_plant_flags(weed_plant_t *plant, int32_t flags) {
+       // clear any bits set in flagsmask from every leaf in plant
+	int nleaves;
+   	char **leaves = weed_plant_list_leaves(plant, &nleaves);
+   	for (int i = 0; i < nleaves; i++) {
+      		weed_leaf_set_flags(plant, leaves[i], (weed_leaf_get_flags(plant, leaves[i]) | flags) ^ flags);
+    		free(leaves[i]);
+  	}
+	if (leaves != NULL) free(leaves);
+}
+
+
+weed_error_t weed_plant_free_host(weed_plant_t *plant) {
+  // delete even undeletable plants
+  weed_error_t err;
+  if (!plant) return WEED_ERROR_NOSUCH_PLANT;
+  err = _weed_plant_free(plant);
+  if (err == WEED_SUCCESS) return err;
+  weed_clear_plant_flags(plant, WEED_FLAG_UNDELETABLE, NULL);
+  return _weed_plant_free(plant);
+}
+
+
+weed_error_t weed_leaf_set_host(weed_plant_t *plant, const char *key, int32_t seed_type, weed_size_t num_elems, void *values) {
+  // change even immutable leaves
+  weed_error_t err;
+  if (!plant) return WEED_ERROR_NOSUCH_PLANT;
+  err = _weed_leaf_set(plant, key, seed_type, num_elems, values);
+  if (err == WEED_ERROR_IMMUTABLE) {
+    int32_t flags = weed_leaf_get_flags(plant, key);
+    flags ^= WEED_FLAG_IMMUTABLE;
+    weed_leaf_set_flags(plant, key, flags);
+    err = _weed_leaf_set(plant, key, seed_type, num_elems, values);
+    flags |= WEED_FLAG_IMMUTABLE;
+    weed_leaf_set_flags(plant, key, flags);
+  }
+  return err;
+}
+
+
+inf main(void) {
+/// TODO - complete
+  _weed_plant_free = weed_plant_free;
+  _weed_leaf_set = weed_leaf_set;
+
+// allow us to set immutable values (plugins can't)
+  weed_leaf_set = weed_leaf_set_host;
+
+  // allow us to free undeletable plants (plugins cant')
+  weed_plant_free = weed_plant_free_host;
+  return 0;
+}
